Pushing layout bug fixes and updated animations

--- a/css/index.scss
+++ b/css/index.scss
@@ -156,7 +156,7 @@ body {
   font-family: 'Josefin Sans', sans-serif;
   animation-name: slideIn;
   animation-duration: 1s;
-  animation-timing-function: cubic-bezier(.17,.67,.83,.67);
+  animation-timing-function: cubic-bezier(.17,.67,.83,1.5);
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
 }
@@ -172,14 +172,12 @@ body {
   display: flex;
   flex-direction: column;
   padding-top: 5vh;
-  padding-bottom: 15vh;
+  padding-bottom: 5vh;
   align-items: center;
   text-align: justify;
   font-size: 100%;
   color: #888;
   font-family: 'Josefin Sans', sans-serif;
-  background-color: #181717;
-  clip-path: polygon(0 0, 100% 0%, 100% 75%, 0% 100%);
   width: 100vw;
 }
 
@@ -189,6 +187,11 @@ body {
   margin-bottom: 1.5vh;
   color: #201F1F;
   padding-left: 10vw;
+  animation-name: fadeIn;
+  animation-duration: 0.25s;
+  animation-iteration-count: 1;
+  animation-timing-function: linear;
+  animation-fill-mode: fowards;
   padding-right: 10vw;
   font-family: 'Righteous', cursive;
   clip-path: polygon(5% 0, 100% 0%, 95% 100%, 0% 100%);
@@ -208,16 +211,16 @@ body {
   text-align: justify;
   display: flex;
   flex-direction: column;
-  padding-top: 15vh;
+  padding-top: 10vh;
   padding-bottom: 10vh;
   align-items: center;
-  margin-top: -22.9%;
+  /*margin-top: -22.9%;*/
   text-align: justify;
   font-size: 100%;
   color: #828282;
   font-family: 'Josefin Sans', sans-serif;
   background-color: #323232;
-  clip-path: polygon(0 29%, 100% 0%, 100% 100%, 0% 100%);
+  /*clip-path: polygon(0 29%, 100% 0%, 100% 100%, 0% 100%);*/
   width: 100vw;
 }
 
@@ -225,6 +228,11 @@ body {
   font-size: 150%;
   margin-top: 1.5vh;
   margin-bottom: 1.5vh;
+  animation-name: fadeIn;
+  animation-duration: 0.25s;
+  animation-iteration-count: 1;
+  animation-timing-function: linear;
+  animation-fill-mode: fowards;
   color: #828282;
   padding-left: 10vw;
   padding-right: 10vw;
@@ -240,6 +248,19 @@ body {
   padding-left: 13vw;
   padding-right: 13vw;
   font-size: 175%;
+}
+
+@keyframes fadeIn{
+  0%{
+    padding-left: 0vw;
+    padding-right: 0vw;
+    opacity: 0;
+  }
+  100%{
+    padding-left: 10vw;
+    padding-right: 10vw;
+    opacity: 1;
+  }
 }
 
 @keyframes slideIn{
